Update ServerGamePacketListenerImpl.java