@@ -963,7 +963,9 @@ public class ServerGamePacketListenerImpl
       if (carried.has(DataComponents.WRITABLE_BOOK_CONTENT)) {
          ItemStack writtenBook = carried.transmuteCopy(Items.WRITTEN_BOOK);
          writtenBook.remove(DataComponents.WRITABLE_BOOK_CONTENT);
-         List<Filterable<Component>> pages = contents.stream().map(page -> this.filterableFromOutgoing(page).map(Component::literal)).toList();
+         List<Filterable<Component>> pages = contents.stream()
+    .map(page -> this.filterableFromOutgoing(page).<Component>map(Component::literal))
+    .collect(Collectors.toList());
          writtenBook.set(
             DataComponents.WRITTEN_BOOK_CONTENT, new WrittenBookContent(this.filterableFromOutgoing(title), this.player.getPlainTextName(), 0, pages, true)
          );
